@@ -31,11 +31,11 @@ import net.minecraft.world.level.block.CropBlock;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.block.state.properties.IntegerProperty;
-import net.neoforged.neoforge.fluids.capability.IFluidHandler;
-import net.neoforged.neoforge.items.IItemHandler;
-import net.neoforged.neoforge.items.ItemHandlerHelper;
-import net.neoforged.neoforge.items.ItemStackHandler;
-import net.neoforged.neoforge.common.util.FakePlayerFactory;
+import net.minecraftforge.fluids.capability.IFluidHandler;
+import net.minecraftforge.items.IItemHandler;
+import net.minecraftforge.items.ItemHandlerHelper;
+import net.minecraftforge.items.ItemStackHandler;
+import net.minecraftforge.common.util.FakePlayerFactory;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -374,7 +374,7 @@ public class GreenhouseBE extends BaseMachineBE implements PoweredMachineBE, Flu
 
     private boolean hasOutputSpace(GreenhouseCropDefinition definition) {
         if (definition.outputs().isEmpty()) return false;
-        ItemStack primary = definition.outputs().getFirst();
+        ItemStack primary = definition.outputs().get(0);
         return getInsertableCount(primary) >= primary.getCount();
     }
 
@@ -385,7 +385,7 @@ public class GreenhouseBE extends BaseMachineBE implements PoweredMachineBE, Flu
             ItemStack existing = itemHandler.getStackInSlot(slot);
             if (existing.isEmpty()) {
                 capacity += itemHandler.getSlotLimit(slot);
-            } else if (ItemStack.isSameItemSameComponents(existing, output)) {
+            } else if (ItemStack.isSameItemSameTags(existing, output)) {
                 capacity += Math.max(0, itemHandler.getSlotLimit(slot) - existing.getCount());
             }
         }
@@ -477,7 +477,7 @@ public class GreenhouseBE extends BaseMachineBE implements PoweredMachineBE, Flu
 
     private GreenhouseCropDefinition getDefinition(int slot) {
         ItemStack seed = itemHandler.getStackInSlot(slot);
-        if (!ItemStack.isSameItemSameComponents(seed, cachedSeeds[slot])) {
+        if (!ItemStack.isSameItemSameTags(seed, cachedSeeds[slot])) {
             cachedSeeds[slot] = seed.isEmpty() ? ItemStack.EMPTY : seed.copyWithCount(1);
             cachedDefinitions[slot] = GreenhouseCropResolver.find(level, seed);
             ResourceLocation nextDisplay = cachedDefinitions[slot] == null ? null : cachedDefinitions[slot].displayBlock();
@@ -545,10 +545,10 @@ public class GreenhouseBE extends BaseMachineBE implements PoweredMachineBE, Flu
         if (UpgradeHelper.hasOverclock(this)) {
             return JDTEConfig.COMMON.greenhouseOverclockMaxSpeedMultiplier.get();
         }
-        return Math.clamp(multiplier, 1, getMaxSelectableMultiplier());
+        return net.minecraft.util.Mth.clamp(multiplier, 1, getMaxSelectableMultiplier());
     }
     public void setMultiplier(int multiplier) {
-        int clamped = Math.clamp(multiplier, 1, getMaxSelectableMultiplier());
+        int clamped = net.minecraft.util.Mth.clamp(multiplier, 1, getMaxSelectableMultiplier());
         if (this.multiplier != clamped) {
             this.multiplier = clamped;
             setChanged();
@@ -636,10 +636,10 @@ public class GreenhouseBE extends BaseMachineBE implements PoweredMachineBE, Flu
     @Override public boolean canRun() { return true; }
 
     @Override
-    public void saveAdditional(CompoundTag tag, HolderLookup.Provider provider) {
-        super.saveAdditional(tag, provider);
-        tag.put("inventory", OversizedItemStackHandlerSerialization.serialize(itemHandler, provider));
-        tag.put("fluid", fluidTank.serializeNBT(provider));
+    public void saveAdditional(CompoundTag tag) {
+        super.saveAdditional(tag);
+        tag.put("inventory", OversizedItemStackHandlerSerialization.serialize(itemHandler));
+        tag.put("fluid", fluidTank.serializeNBT());
         tag.putInt("energy", energyStorage.getEnergyStored());
         tag.putLongArray("growthWork", growthWork);
         tag.putInt("settlementTicker", settlementTicker);
@@ -652,10 +652,10 @@ public class GreenhouseBE extends BaseMachineBE implements PoweredMachineBE, Flu
     }
 
     @Override
-    public void loadAdditional(CompoundTag tag, HolderLookup.Provider provider) {
-        super.loadAdditional(tag, provider);
-        if (tag.contains("inventory")) loadInventory(tag.getCompound("inventory"), provider);
-        if (tag.contains("fluid")) fluidTank.deserializeNBT(provider, tag.getCompound("fluid"));
+    public void load(CompoundTag tag) {
+        super.load(tag);
+        if (tag.contains("inventory")) loadInventory(tag.getCompound("inventory"));
+        if (tag.contains("fluid")) fluidTank.deserializeNBT(tag.getCompound("fluid"));
         if (tag.contains("energy")) energyStorage.setEnergy(tag.getInt("energy"));
         if (tag.contains("growthWork", Tag.TAG_LONG_ARRAY)) {
             long[] savedWork = tag.getLongArray("growthWork");
@@ -679,13 +679,13 @@ public class GreenhouseBE extends BaseMachineBE implements PoweredMachineBE, Flu
         Arrays.fill(cachedDefinitions, null);
     }
 
-    private void loadInventory(CompoundTag inventoryTag, HolderLookup.Provider provider) {
+    private void loadInventory(CompoundTag inventoryTag) {
         if (inventoryTag.getInt("Size") != LEGACY_TOTAL_SLOTS) {
-            OversizedItemStackHandlerSerialization.deserialize(itemHandler, provider, inventoryTag);
+            OversizedItemStackHandlerSerialization.deserialize(itemHandler, inventoryTag);
             return;
         }
         ItemStackHandler legacy = new ItemStackHandler(LEGACY_TOTAL_SLOTS);
-        legacy.deserializeNBT(provider, inventoryTag);
+        legacy.deserializeNBT(inventoryTag);
         itemHandler.setStackInSlot(0, legacy.getStackInSlot(0));
         for (int slot = 1; slot < LEGACY_TOTAL_SLOTS; slot++) {
             itemHandler.setStackInSlot(OUTPUT_START_SLOT + slot - 1, legacy.getStackInSlot(slot));
