@@ -1,9 +1,5 @@
 package com.jdte.common.recipes;
 
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.Items;
-import net.minecraft.world.item.crafting.Ingredient;
-import net.neoforged.neoforge.fluids.FluidStack;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
@@ -14,81 +10,104 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class LifeSynthesisRecipeTest {
-
-    private static LifeSynthesisRecipe recipe(LifeSynthesisRecipe.InputSlot... inputs) {
-        return new LifeSynthesisRecipe(List.of(inputs), List.of(), FluidStack.EMPTY, 100, 10, "plant");
+    private record Requirement(String item, int count) {
     }
 
-    private static LifeSynthesisRecipe.InputSlot diamondSlot(int count) {
-        return new LifeSynthesisRecipe.InputSlot(Ingredient.of(Items.DIAMOND), count);
+    private static final class Slot {
+        private final String item;
+        private int count;
+
+        private Slot(String item, int count) {
+            this.item = item;
+            this.count = count;
+        }
+
+        private int count() {
+            return count;
+        }
+
+        private void shrink(int amount) {
+            count -= amount;
+        }
     }
 
-    private static LifeSynthesisRecipe.InputSlot emeraldSlot(int count) {
-        return new LifeSynthesisRecipe.InputSlot(Ingredient.of(Items.EMERALD), count);
+    private static Requirement diamondSlot(int count) {
+        return new Requirement("diamond", count);
     }
 
-    private static List<ItemStack> slots(ItemStack... stacks) {
+    private static Requirement emeraldSlot(int count) {
+        return new Requirement("emerald", count);
+    }
+
+    private static List<Slot> slots(Slot... stacks) {
         return new ArrayList<>(List.of(stacks));
+    }
+
+    private static Slot stack(String item, int count) {
+        return new Slot(item, count);
+    }
+
+    private static boolean consume(List<Requirement> requirements, List<Slot> slots) {
+        return LifeSynthesisRecipe.consumeStrict(requirements, slots,
+                (requirement, slot) -> requirement.item().equals(slot.item), Requirement::count, Slot::count, Slot::shrink);
+    }
+
+    private static boolean matches(List<Requirement> requirements, List<Slot> slots) {
+        return LifeSynthesisRecipe.matchesStrict(requirements, slots,
+                (requirement, slot) -> requirement.item().equals(slot.item), Requirement::count, Slot::count);
     }
 
     @Test
     void consumeStrictConsumesExactAmounts() {
-        LifeSynthesisRecipe recipe = recipe(diamondSlot(3));
-        List<ItemStack> inputs = slots(new ItemStack(Items.DIAMOND, 3));
+        List<Slot> inputs = slots(stack("diamond", 3));
 
-        assertTrue(recipe.consumeStrict(inputs));
-        assertTrue(inputs.getFirst().isEmpty());
+        assertTrue(consume(List.of(diamondSlot(3)), inputs));
+        assertEquals(0, inputs.get(0).count());
     }
 
     /** 回归测试：数量不足时必须整体拒绝，不得部分扣减后仍产出整批。 */
     @Test
     void consumeStrictRejectsInsufficientCountsWithoutPartialConsume() {
-        LifeSynthesisRecipe recipe = recipe(diamondSlot(3));
-        List<ItemStack> inputs = slots(new ItemStack(Items.DIAMOND, 2));
+        List<Slot> inputs = slots(stack("diamond", 2));
 
-        assertFalse(recipe.consumeStrict(inputs));
-        assertEquals(2, inputs.getFirst().getCount());
+        assertFalse(consume(List.of(diamondSlot(3)), inputs));
+        assertEquals(2, inputs.get(0).count());
     }
 
     @Test
     void consumeStrictSpreadsAcrossMultipleSlots() {
-        LifeSynthesisRecipe recipe = recipe(diamondSlot(5));
-        List<ItemStack> inputs = slots(new ItemStack(Items.DIAMOND, 3), new ItemStack(Items.DIAMOND, 2));
+        List<Slot> inputs = slots(stack("diamond", 3), stack("diamond", 2));
 
-        assertTrue(recipe.consumeStrict(inputs));
-        assertTrue(inputs.get(0).isEmpty());
-        assertTrue(inputs.get(1).isEmpty());
+        assertTrue(consume(List.of(diamondSlot(5)), inputs));
+        assertEquals(0, inputs.get(0).count());
+        assertEquals(0, inputs.get(1).count());
     }
 
     /** 任一输入行不满足时整体回滚，先匹配成功的行也不得扣减。 */
     @Test
     void consumeStrictRejectsWhenAnyRowUnavailableWithoutPartialConsume() {
-        LifeSynthesisRecipe recipe = recipe(diamondSlot(3), emeraldSlot(3));
-        List<ItemStack> inputs = slots(new ItemStack(Items.DIAMOND, 6));
+        List<Slot> inputs = slots(stack("diamond", 6));
 
-        assertFalse(recipe.consumeStrict(inputs));
-        assertEquals(6, inputs.getFirst().getCount());
+        assertFalse(consume(List.of(diamondSlot(3), emeraldSlot(3)), inputs));
+        assertEquals(6, inputs.get(0).count());
     }
 
     /** 同一输入槽不得被多行重复扣减（槽独占语义）。 */
     @Test
     void consumeStrictRejectsSharedSlotAcrossRows() {
-        LifeSynthesisRecipe recipe = recipe(diamondSlot(3), diamondSlot(3));
-        List<ItemStack> inputs = slots(new ItemStack(Items.DIAMOND, 6));
+        List<Slot> inputs = slots(stack("diamond", 6));
 
-        assertFalse(recipe.consumeStrict(inputs));
-        assertEquals(6, inputs.getFirst().getCount());
+        assertFalse(consume(List.of(diamondSlot(3), diamondSlot(3)), inputs));
+        assertEquals(6, inputs.get(0).count());
     }
 
     @Test
     void matchesSlotsAcceptsSufficientCounts() {
-        LifeSynthesisRecipe recipe = recipe(diamondSlot(3));
-        assertTrue(recipe.matchesSlots(slots(new ItemStack(Items.DIAMOND, 4))));
+        assertTrue(matches(List.of(diamondSlot(3)), slots(stack("diamond", 4))));
     }
 
     @Test
     void matchesSlotsRejectsInsufficientCounts() {
-        LifeSynthesisRecipe recipe = recipe(diamondSlot(3));
-        assertFalse(recipe.matchesSlots(slots(new ItemStack(Items.DIAMOND, 2))));
+        assertFalse(matches(List.of(diamondSlot(3)), slots(stack("diamond", 2))));
     }
 }
